--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     </head>
     <body>
         <h1>RUN Buddy</h1>
-        What We Do
-    
+        What We Do What You do Your Trainers Reach Out
     </body>
 </html>
 
