--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
 
     <!-- navigation -->
     <header>
-        <h1>RUN Buddy</h1>
+        <h1>
+            <a href="/">RUN BUDDY</a>
+        </h1>
+        <nav>
+
+        <!-- Unordered List Element -->
+        <ul>
+            <!-- List Item Element-->
+            <li>
+                <!-- Anchor Element -->
+                <a href="#what-we-do">What We Do</a>
+            </li>
+            <li>
+                <a href="#what-you-do">What You Do</a>
+            </li>
+            <li>
+                <a href="#your-trainers">Your Trainers</a>
+            </li>
+            <li>
+                <a href="#reach-out">Reach Out</a>
+            </li>
+        </ul>
+        </nav>
     </header>
 
     <!-- hero/jumbotron -->
