--- a/index.html
+++ b/index.html
@@ -37,41 +37,42 @@
 
     <!-- Hero Section -->
 
-    <section>
-        <div>
-            <h3>Get Started Today</h3>
-            <p>Fill out this form and one of our trainers will schedule a consult</p>
-        <!-- Add Form Element-->
-        <form>
-            <!-- Name -->
-            <label for="name">Enter full name:</label>
-            <input type="text" placeholder="Your Name" name="name" id="name" />
-            <!-- Email -->
-            <label for="email">Enter email adress:</label>
-            <input type="email" placeholder="Email Adress" name="email" id="email" />
-            <!-- Phone -->
-            <label for="phone">Enter phone number:</label>
-            <input type="tel" placeholder="Phone Number" name="phone" id="phone" />
-            <p>
-                Have you worked out with a trainer before?
-                <input type="radio" name="trainer-confirm" id="trainer-yes" />
-                <label for="trainer-yes">Yes</label>
-                <input type="radio" name="trainer-confirm" id="trainer-no" />
-                <label for="trainer-no">No</label>
-            </p>
-            <!-- Add the Checkbox Input -->
-            <p>
-                <label for="checkbox" ></label>
-                I acknowledge that I am at least 18 years of age.
-                </label>
-                <inout type="checkbox" name="age-confirm" id="checkbox" />
-            </p>
-            <button type="submit">
-                Get Running!
-            </button>
-        </form>
-        </div>
-    </section>
+        <section class="hero">
+
+            <div class="hero-form">
+                <h3>Get Started Today</h3>
+                <p>Fill out this form and one of our trainers will schedule a consult</p>
+                <!-- Add Form Element-->
+                <form>
+                    <!-- Name -->
+                    <label for="name">Enter full name:</label>
+                    <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
+                    <!-- Email -->
+                    <label for="email">Enter email adress:</label>
+                    <input type="email" placeholder="Email Adress" name="email" id="email" class="form-input" />
+                    <!-- Phone -->
+                    <label for="phone">Enter phone number:</label>
+                    <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input"/>
+                    <p>
+                    Have you worked out with a trainer before?
+                    <input type="radio" name="trainer-confirm" id="trainer-yes" />
+                    <label for="trainer-yes">Yes</label>
+                    <input type="radio" name="trainer-confirm" id="trainer-no" />
+                    <label for="trainer-no">No</label>
+                    </p>
+                    <!-- Add the Checkbox Input -->
+                    <p>
+                    <label for="checkbox" ></label>
+                    I acknowledge that I am at least 18 years of age.
+                    </label>
+                    <inout type="checkbox" name="age-confirm" id="checkbox" />
+                    </p>
+                    <button type="submit">
+                        Get Running!
+                    </button>
+                </form>
+            </div>
+        </section>
 
     <!-- End Hero -->
 
@@ -110,7 +111,6 @@
           </div>
         </footer>
     </body>
-
 
 </html>
 
