--- a/index.html
+++ b/index.html
@@ -119,9 +119,45 @@
         </section>
       
         <!-- "meet the trainers" section -->
-        <section>
-          <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+          <h2 class="section-title primary-border">Meet The Trainers</h2>
+            <!-- First Trainer Bio -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, quae non veritatis iste nihil corporis, sequi ipsam fugit doloribus corrupti maiores quidem vero architecto dolor voluptates, repellendus libero commodi quisquam.
+                    </p>
+                </div>
+            </article>
+
+            <!-- Second Trainer bio -->
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus sit sunt nulla quae dolores facilis quis fuga? Consequatur at dolore aliquid, deserunt aperiam quasi praesentium in sint fugit voluptates dicta.
+                    </p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+            </article>
+
+            <!-- Third Trainer Bio -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui quod fugit in quis, dicta vel esse aspernatur natus aliquid, consequuntur, labore eaque quidem voluptas? Voluptatem asperiores fuga quibusdam exercitationem excepturi?
+                    </p>
+                </div>
+            </article>
         </section>
+
 
         <!-- "reach out" section -->
         <section>
